Forsøk på løse foreldreansvar (#2169)
* Forsøk på løse foreldreansvar

* Revert "Forsøk på løse foreldreansvar"

This reverts commit a27905d3250a69bdda19a23d2aa95a6319cc1ba8.

* Oppdatert prosjekt-config

* Forsøk på foreldrerelasjon og ansvar

* Oppdatert, rettet feil

* Rettet feil Sonar + overlappende datoer sivilstand

* Oppdatert gjeldende

* Oppdatert sivilstand

* Oppdatert gjeldende service

* Rettet feil ved sivilstandservice

* Refaktorert validering

* Oppdatert tester